--- a/src/sass/components/spinkit.scss
+++ b/src/sass/components/spinkit.scss
@@ -119,24 +119,29 @@ $spinkit-spinner-color: $color-okada-light-1 !default;
   }
 }
 
+$cubeDistance: calc($spinkit-size / 2);
 @keyframes sk-wandering-cubes {
-  $cubeDistance: ($spinkit-size / 2);
   0% {
     transform: rotate(0deg);
   }
+
   25% {
     transform: translateX($cubeDistance) rotate(-90deg) scale(0.5);
   }
+
   50% {
     /* Hack to make FF rotate in the right direction */
     transform: translateX($cubeDistance) translateY($cubeDistance) rotate(-179deg);
   }
+
   50.1% {
     transform: translateX($cubeDistance) translateY($cubeDistance) rotate(-180deg);
   }
+
   75% {
     transform: translateX(0) translateY($cubeDistance) rotate(-270deg) scale(0.5);
   }
+
   100% {
     transform: rotate(-360deg);
   }
