refactor(style, sass, animations, safari): compatibility patches

--- a/src/sass/themes/default.scss
+++ b/src/sass/themes/default.scss
@@ -5,3 +5,6 @@
 @import 'v1/the-restaurants';
 @import 'v1/cove-manila';
 @import 'v1/others';
+
+// Include compatibility patches
+@import '../layout/patches/safari';
