--- a/src/sass/layout/responsive/mobile.scss
+++ b/src/sass/layout/responsive/mobile.scss
@@ -44,7 +44,7 @@
 
       .the-company-logo {
         margin-bottom: 2em;
-        width: 95%;
+        width: 90%;
       }
     }
 
@@ -130,6 +130,11 @@
         background-position: center bottom !important;
         background-size: auto !important;
         min-height: 21em;
+      }
+
+      .the-company-logo {
+        margin-bottom: 2em;
+        width: 256px !important;
       }
     }
 
