--- a/src/sass/layout/grid.scss
+++ b/src/sass/layout/grid.scss
@@ -33,7 +33,16 @@
 
 @media screen and (min-width: 1400px) {
   .main-container {
-    margin-bottom: 28vw;
+    margin-bottom: 0;
+
+    .row.cove-manila-row-2 {
+      background-size: 100% !important;
+      height: 120em !important;
+    }
+
+    .cove-manila-row-2-sub-1 {
+      margin-bottom: 2em;
+    }
   }
 }
 
