refactor(navbar, responsive, menu, grid): collapsible navigation & mobile ui adjustments for lands

--- a/src/sass/components/nav-overlay.scss
+++ b/src/sass/components/nav-overlay.scss
@@ -47,6 +47,12 @@
     width: 100%;
   }
 
+  @include landscape {
+    .overlay-content {
+      top: 0;
+    }
+  }
+
   .closebtn {
     color: $color-okada-light-3;
     font-size: 60px;
