refactor(responsive, mobile, mobile-only): patches for mobile only (landscape)

--- a/src/sass/layout/responsive/mobile.scss
+++ b/src/sass/layout/responsive/mobile.scss
@@ -271,7 +271,7 @@
 
 // another
 // Bootstrap 4 breakpoint overrides for landscape view
-@include landscape {
+@include screen(0, 480px, landscape) {
   .col-sm-12 {
     max-width: 78%;
   }
