refactor(responsive, desktop, safari): cross-platform styling for cove manila

--- a/src/sass/layout/patches/safari.scss
+++ b/src/sass/layout/patches/safari.scss
@@ -14,4 +14,8 @@
       font-family: $font-family-montserrat !important;
     }
   }
+
+  @include media-breakpoint-up(xl) {
+    margin-bottom: 0;
+  }
 }
