--- a/src/sass/themes/v1/cove-manila.scss
+++ b/src/sass/themes/v1/cove-manila.scss
@@ -255,6 +255,16 @@
     height: 50em;
   }
 
+  @include media-breakpoint-up(xl) {
+    // FEATURED DJ BELOW
+    .cove-manila-row-2-sub-2 {
+      .featured-dj-below {
+        position: relative;
+        top: 8em !important;
+      }
+    }
+  }
+
   // DESKTOP UP
   @include media-breakpoint-up(lg) {
     // margin-bottom: 52em;
@@ -381,11 +391,14 @@
 
     // FEATURED DJ BELOW
     .cove-manila-row-2-sub-2 {
-      position: relative;
-      top: 15vw;
+      // position: relative;
+      // top: 15vw;
       width: 100%;
 
       .featured-dj-below {
+        position: relative;
+        top: -10em;
+
         .featured-dj-below-profile {
           border-width: 2px;
           padding: 6em 1em;
@@ -538,6 +551,16 @@
 
     // DJ KAKA
     .featured-dj-2 {
+    }
+
+    .cove-manila-row-2-sub-2 {
+      margin: 0 auto;
+      min-height: 480px;
+
+      .featured-dj-below {
+        position: relative;
+        top: -11em;
+      }
     }
   }
 
@@ -786,6 +809,31 @@
 
     .dj-kaka-svg {
       max-height: 330.73px;
+    }
+  }
+}
+
+@media screen and (min-width: 1401px) {
+  .main-container {
+    margin-bottom: 35em;
+
+    .row.cove-manila-row-2 {
+      background-size: 100% !important;
+      height: 85em !important;
+    }
+
+    .cove-manila-row-2-sub-1 {
+      margin-bottom: 2em;
+    }
+
+    .cove-manila-row-2-sub-2 {
+      // margin: 0 auto;
+      height: 42em;
+
+      .featured-dj-below {
+        position: relative;
+        top: -10em !important;
+      }
     }
   }
 }
