--- a/src/sass/themes/v1/cove-manila.scss
+++ b/src/sass/themes/v1/cove-manila.scss
@@ -260,7 +260,7 @@
     .cove-manila-row-2-sub-2 {
       .featured-dj-below {
         position: relative;
-        top: 8em !important;
+        top: -20em !important;
       }
     }
   }
@@ -815,7 +815,7 @@
 
 @media screen and (min-width: 1401px) {
   .main-container {
-    margin-bottom: 35em;
+    margin-bottom: 20%;
 
     .row.cove-manila-row-2 {
       background-size: 100% !important;
