--- a/src/sass/layout/responsive/tablets.scss
+++ b/src/sass/layout/responsive/tablets.scss
@@ -151,6 +151,125 @@
 }
 
 // iPad portrait
+@include ipad-pro(portrait) {
+  .main-container {
+    .the-company-row {
+      height: 40vh;
+    }
+
+    .cove-manila-row {
+      height: 60vw;
+
+      .cove-manila-logo {
+        height: 17rem;
+      }
+
+      .cove-manila-logo-caption {
+        font-size: inherit;
+        letter-spacing: 0.5em;
+      }
+    }
+
+    // .cove-manila-row-1,
+    // .cove-manila-row-2 {
+    //   height: 60vw;
+    // }
+
+    .cove-manila-row-1 {
+      background-position-y: top;
+    }
+
+    .cove-manila-row-2 {
+      background-position-y: top;
+      padding: 0;
+    }
+
+    .cove-manila-row-1-sub-1 {
+      position: relative;
+      top: -15em;
+    }
+
+    .cove-manila-row-1-sub-2 {
+      height: 22em;
+      // margin-top: 29em;
+    }
+
+    // FEATURED DJ BELOW
+    .cove-manila-row-2-sub-2 {
+      height: unset !important;
+      min-height: 196px !important;
+      width: 100%;
+
+      .featured-dj-below {
+        position: relative;
+        top: -4em !important;
+
+        .featured-dj-below-profile {
+          border-width: 2px;
+          padding: 6em 1em;
+          width: 80%;
+        }
+
+        .featured-dj-below-profile-image {
+          bottom: 6.5em !important;
+          height: 29vw;
+          width: 28vw;
+        }
+
+        .featured-dj-below-profile-details {
+          align-self: flex-start !important;
+          margin-top: 0 !important;
+
+          .featured-dj-name {
+            font-size: 28px !important;
+          }
+
+          .featured-dj-name-desc {
+            font-size: 18px !important;
+          }
+        }
+      }
+    }
+
+    // COMPONENTS =====================
+
+    .visit-channel-button {
+      // border: $color-okada-normal-4 1px solid;
+      border-radius: 0;
+      // border-top: 0 !important;
+      border-width: 2px;
+      padding: 2.75rem 0.75rem;
+      width: calc(100% - 7.8rem);
+
+      &:hover,
+      &:active,
+      &:focus {
+        background: $dazzling-mask-color;
+        box-shadow: unset;
+
+        .visit-channel-text {
+          @include dazzling-text-disable;
+          color: $black;
+        }
+      }
+    }
+
+    .visit-channel-text {
+      @include dazzling-text;
+      // color: $color-okada-dark-1;
+      // font-family: 'Roboto Bold Italic';
+      font-size: 28px;
+      // margin: 0;
+
+      &:hover,
+      &:active,
+      &:focus {
+        @include dazzling-text-disable;
+      }
+    }
+  }
+}
+
 @include ipad(portrait) {
   .navbar {
     .navbar-toggler-right {
@@ -192,6 +311,7 @@
     }
 
     .the-company-row {
+      height: 50vh;
       padding-top: 0;
 
       .heading-col {
@@ -205,28 +325,26 @@
     }
 
     .night-show-row {
-      height: 67vh;
+      height: 67vh !important;
     }
 
     .the-restaurants-row {
-      // "cols" which is all of columns
-      .the-restaurants-cols {
-        height: 50vh;
-      }
+      display: flex;
+      min-height: unset;
 
       .the-restaurants-col,
       .the-restaurants-content {
-        height: 100%;
+        align-self: center;
       }
 
       .the-restaurants-col {
         .the-restaurants-heading {
-          font-size: 35px;
+          font-size: 30px;
           line-height: 1em;
         }
 
         .okada-hero-caption {
-          font-size: 16px;
+          font-size: 13px;
         }
       }
     }
@@ -282,15 +400,18 @@
     }
 
     .cove-manila-row-2 {
-      padding-top: 0;
+      background-size: 130% !important;
+      padding-top: 0 !important;
     }
 
     .cove-manila-row-2-sub-1 {
-      height: 45em;
+      height: 50em;
     }
 
     .featured-dj-2 {
+      max-width: unset !important;
       top: 0;
+      width: 100%;
 
       .grid-container {
         height: 100%;
@@ -342,8 +463,44 @@
       }
     }
 
+    // .cove-manila-row-2-sub-2 {
+    //   height: 20em;
+    // }
+
+    // FEATURED DJ BELOW
     .cove-manila-row-2-sub-2 {
-      height: 20em;
+      height: unset;
+      min-height: 196px;
+      width: 100%;
+
+      .featured-dj-below {
+        position: relative;
+        top: -4em !important;
+
+        .featured-dj-below-profile {
+          border-width: 2px;
+          padding: 6em 1em;
+          width: 80%;
+        }
+
+        .featured-dj-below-profile-image {
+          bottom: 6.5em !important;
+          height: 29vw;
+          width: 28vw;
+        }
+
+        .featured-dj-below-profile-details {
+          align-self: flex-start;
+
+          .featured-dj-name {
+            font-size: 28px !important;
+          }
+
+          .featured-dj-name-desc {
+            font-size: 18px !important;
+          }
+        }
+      }
     }
   }
 }
