--- a/src/sass/themes/v1/cove-manila.scss
+++ b/src/sass/themes/v1/cove-manila.scss
@@ -815,7 +815,7 @@
 
 @media screen and (min-width: 1401px) {
   .main-container {
-    margin-bottom: 20%;
+    margin-bottom: 30vw;
 
     .row.cove-manila-row-2 {
       background-size: 100% !important;
